add_subdirectory(TosaToLinalgUpdate)
add_subdirectory(FusionToMemVec)
add_subdirectory(VectorTransferLower)
add_subdirectory(MindSporeToTosa)
add_subdirectory(MindSporeToLinalg)
add_subdirectory(MindSporeFinalizingLower)
add_subdirectory(LinalgExtLower)
add_subdirectory(PureOpenMPToLLVM)
add_subdirectory(ArithToLinalg)
add_subdirectory(AffineToSCF)
add_subdirectory(ArithToHIVM)
